index page commit

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Start</title>
+	<title>Твой персональный тренерonline</title>
 	<meta name="description" content="">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -12,8 +12,8 @@
 
 	<link rel="stylesheet" href="css/main.min.css?v=1">
 
-	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700&display=swap&subset=cyrillic" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:200,300,400,500,600,700&display=swap&subset=cyrillic" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Oswald:600&display=swap&subset=cyrillic" rel="stylesheet">
 
 </head>
@@ -23,12 +23,12 @@
 	<main class="main">
 
 		<header class="header">
+			<img src="img/main--bg.png" alt="" class="main__before">
+
 			<div class="header__container container">
 
 				<button class="hamburger" type="button">
-					<span class="hamburger__box">
-						<span class="hamburger__item"></span>
-					</span>
+					<span class="hamburger__item"></span>
 				</button>
 
 				<nav class="header__nav nav">
@@ -82,10 +82,48 @@
 		</section>
 
 		<footer class="footer">
-			<div class="container">
-				
+			<div class="footer__container container">
+
+				<div class="footer__col">
+					<p>© Fitlancer, 2019, </p>
+					<p><a href="#">все права защищены</a></p>
+				</div>
+
+				<div class="footer__col">
+					<h3>O Fitlancer</h3>
+					<ul>
+						<li><a href="#">О проекте</a></li>
+						<li><a href="#">Пользовательское соглашение</a></li>
+						<li><a href="#">Политика конфиденциальности</a></li>
+					</ul>
+				</div>
+
+				<div class="footer__col">
+					<h3>Меню</h3>
+					<ul>
+						<li><a href="about.html">О нас</a></li>
+						<li><a href="partners.html">Наши тренеры</a></li>
+						<li><a href="list.html">Список упражнений</a></li>
+					</ul>
+				</div>
+
+				<div class="footer__col">
+					<h3>Связь с нами</h3>
+					<div class="footer__soc">
+						<a href="#" target="_blank"><img src="img/footer--in.png" alt=""></a>
+						<a href="#" target="_blank"><img src="img/footer--tg.png" alt=""></a>
+						<a href="#" target="_blank"><img src="img/footer--vk.png" alt=""></a>
+					</div>
+					<a href="mailto:fitlancer@gmail.com">fitlancer@gmail.com</a>
+				</div>
+
+				<div class="footer__col">
+					<a href="#" class="btn">Обратная связь</a>
+				</div>
+
 			</div>
 		</footer>
+
 	</main>
 
 
