--- a/app/exercises.html
+++ b/app/exercises.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Тренеры</title>
+	<title>Группа мышц</title>
 	<meta name="description" content="">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -47,7 +47,7 @@
 		</div>
 	</header>
 
-	<section class="trainers">
+	<section class="exercises">
 		<div class="container">
 
 			<form class="exercises__btn">
