admin1 + admin3 page commit

--- a/app/exercises-accordion.html
+++ b/app/exercises-accordion.html
@@ -58,7 +58,7 @@
 
 			<h2><a href="#">Наши тренеры</a> <span></span> <a href="#">плечи</a></h2>
 
-			<div class="block">
+			<div class="block block--active">
 				<div class="block__header">
 					<span></span>
 					<p><b>Жим штанги из положения стоя</b></p>
