profile2 page commit

--- a/app/profile2.html
+++ b/app/profile2.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Мой профиль</title>
+	<title>Мой профиль 2</title>
 	<meta name="description" content="">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -50,19 +50,12 @@
 	<section class="exercises">
 		<div class="container">
 
-			<div class="title">
-				<h2>мой профиль</h2>
-				<div>
-					<a href="#" class="btn">Сообщения</a>
-					<a href="#" class="btn">Мои программы</a>
-				</div>
-			</div>
-
 			<div class="profile--my">
 
 				<div class="profile--my__left">
 					<div class="profile--my__left_img">
 						<img src="img/avatar.jpg" alt="">
+						<span>Online</span>
 					</div>
 				</div>
 
@@ -87,7 +80,8 @@
 								<b>2 года</b>
 							</li>
 						</ul>
-						<a href="#" class="btn">Редактировать профиль</a>
+						<a href="#" class="btn">Написать сообщение</a>
+						<a href="#" class="btn">Создать программу</a>
 					</div>
 					<div class="profile--my__right_col">
 						<p><span>О себе</span></p>
