profile-trainer2 page commit

--- a/app/profile-trainer2.html
+++ b/app/profile-trainer2.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Профиль тренера</title>
+	<title>Профиль тренера 2</title>
 	<meta name="description" content="">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -49,14 +49,6 @@
 	<section class="exercises">
 		<div class="container">
 
-			<div class="title">
-				<h2>мой профиль</h2>
-				<div>
-					<a href="#" class="btn">Сообщения <b>+12</b></a>
-					<a href="#" class="btn">Мои программы</a>
-				</div>
-			</div>
-
 			<div class="profile--my">
 
 				<div class="profile--my__left">
@@ -67,7 +59,13 @@
 				</div>
 
 				<div class="profile--my__right">
-					<h2>Сергей петров</h2>
+					<div class="title title--name">
+						<h2>Сергей Петров</h2>
+						<p class="title__position">
+							<img src="img/position.png" alt="">
+							<span>тренер</span>
+						</p>
+					</div>
 					<div class="profile--my__right_col">
 						<ul>
 							<li>
@@ -83,7 +81,7 @@
 								<b>2 года</b>
 							</li>
 						</ul>
-						<a href="#" class="btn">Редактировать профиль</a>
+						<a href="#" class="btn">Написать сообщение</a>
 					</div>
 					<div class="profile--my__right_col">
 						<p><span>О себе</span></p>
