--- a/app/profile-massang.html
+++ b/app/profile-massang.html
@@ -288,6 +288,14 @@
 	</footer>
 
 	<script src="js/scripts.min.js"></script>
+	<script>
+		$(function() {
+   			$('.chat').jScrollPane();
+   		});
+   		$(window).resize(function(event) {
+			$('.chat').jScrollPane();
+		});
+	</script>
 
 
 </body>
