--- a/app/trainers.html
+++ b/app/trainers.html
@@ -59,7 +59,7 @@
 					<img src="img/trainers1.jpg" alt="">
 					<div class="trainers__item_content">
 						<div class="trainers__item_header">
-							<b class="trainers__item_bal">5,0</b>
+							<!-- <b class="trainers__item_bal">5,0</b> -->
 							<span class="trainers__item_name">
 								<b>Иванова Алена</b>
 								<span>Фитнесс</span>
@@ -83,7 +83,7 @@
 					<img src="img/trainers1.jpg" alt="">
 					<div class="trainers__item_content">
 						<div class="trainers__item_header">
-							<b class="trainers__item_bal">5,0</b>
+							<!-- <b class="trainers__item_bal">5,0</b> -->
 							<span class="trainers__item_name">
 								<b>Иванова Алена</b>
 								<span>Фитнесс</span>
@@ -105,7 +105,7 @@
 					<img src="img/trainers1.jpg" alt="">
 					<div class="trainers__item_content">
 						<div class="trainers__item_header">
-							<b class="trainers__item_bal">5,0</b>
+							<!-- <b class="trainers__item_bal">5,0</b> -->
 							<span class="trainers__item_name">
 								<b>Иванова Алена</b>
 								<span>Фитнесс</span>
@@ -127,7 +127,7 @@
 					<img src="img/trainers1.jpg" alt="">
 					<div class="trainers__item_content">
 						<div class="trainers__item_header">
-							<b class="trainers__item_bal">5,0</b>
+							<!-- <b class="trainers__item_bal">5,0</b> -->
 							<span class="trainers__item_name">
 								<b>Иванова Алена</b>
 								<span>Фитнесс</span>
@@ -149,7 +149,7 @@
 					<img src="img/trainers1.jpg" alt="">
 					<div class="trainers__item_content">
 						<div class="trainers__item_header">
-							<b class="trainers__item_bal">5,0</b>
+							<!-- <b class="trainers__item_bal">5,0</b> -->
 							<span class="trainers__item_name">
 								<b>Иванова Алена</b>
 								<span>Фитнесс</span>
@@ -171,7 +171,7 @@
 					<img src="img/trainers1.jpg" alt="">
 					<div class="trainers__item_content">
 						<div class="trainers__item_header">
-							<b class="trainers__item_bal">5,0</b>
+							<!-- <b class="trainers__item_bal">5,0</b> -->
 							<span class="trainers__item_name">
 								<b>Иванова Алена</b>
 								<span>Фитнесс</span>
@@ -193,7 +193,7 @@
 					<img src="img/trainers1.jpg" alt="">
 					<div class="trainers__item_content">
 						<div class="trainers__item_header">
-							<b class="trainers__item_bal">5,0</b>
+							<!-- <b class="trainers__item_bal">5,0</b> -->
 							<span class="trainers__item_name">
 								<b>Иванова Алена</b>
 								<span>Фитнесс</span>
@@ -215,7 +215,7 @@
 					<img src="img/trainers1.jpg" alt="">
 					<div class="trainers__item_content">
 						<div class="trainers__item_header">
-							<b class="trainers__item_bal">5,0</b>
+							<!-- <b class="trainers__item_bal">5,0</b> -->
 							<span class="trainers__item_name">
 								<b>Иванова Алена</b>
 								<span>Фитнесс</span>
@@ -237,7 +237,7 @@
 					<img src="img/trainers1.jpg" alt="">
 					<div class="trainers__item_content">
 						<div class="trainers__item_header">
-							<b class="trainers__item_bal">5,0</b>
+							<!-- <b class="trainers__item_bal">5,0</b> -->
 							<span class="trainers__item_name">
 								<b>Иванова Алена</b>
 								<span>Фитнесс</span>
@@ -259,7 +259,7 @@
 					<img src="img/trainers1.jpg" alt="">
 					<div class="trainers__item_content">
 						<div class="trainers__item_header">
-							<b class="trainers__item_bal">5,0</b>
+							<!-- <b class="trainers__item_bal">5,0</b> -->
 							<span class="trainers__item_name">
 								<b>Иванова Алена</b>
 								<span>Фитнесс</span>
@@ -281,7 +281,7 @@
 					<img src="img/trainers1.jpg" alt="">
 					<div class="trainers__item_content">
 						<div class="trainers__item_header">
-							<b class="trainers__item_bal">5,0</b>
+							<!-- <b class="trainers__item_bal">5,0</b> -->
 							<span class="trainers__item_name">
 								<b>Иванова Алена</b>
 								<span>Фитнесс</span>
@@ -303,7 +303,7 @@
 					<img src="img/trainers1.jpg" alt="">
 					<div class="trainers__item_content">
 						<div class="trainers__item_header">
-							<b class="trainers__item_bal">5,0</b>
+							<!-- <b class="trainers__item_bal">5,0</b> -->
 							<span class="trainers__item_name">
 								<b>Иванова Алена</b>
 								<span>Фитнесс</span>
