pravki 1.1 modal + header__login + file + gif commit

--- a/app/admin3.html
+++ b/app/admin3.html
@@ -20,7 +20,6 @@
 
 <body>
 
-
 	<header class="header">
 		<div class="header__container container">
 
@@ -150,15 +149,15 @@
 
 			<div class="footer__col">
 				<p>© Fitlancer, 2019, </p>
-				<p><a href="#">все права защищены</a></p>
+				<p><a href="img/policy.docx" download>все права защищены</a></p>
 			</div>
 
 			<div class="footer__col">
 				<h3>O Fitlancer</h3>
 				<ul>
 					<li><a href="#">О проекте</a></li>
-					<li><a href="#">Пользовательское соглашение</a></li>
-					<li><a href="#">Политика конфиденциальности</a></li>
+					<li><a href="img/policy.docx" download>Пользовательское соглашение</a></li>
+					<li><a href="img/policy.docx" download>Политика конфиденциальности</a></li>
 				</ul>
 			</div>
 
@@ -182,11 +181,40 @@
 			</div>
 
 			<div class="footer__col">
-				<a href="#" class="btn">Обратная связь</a>
+				<a href="#" class="btn order_open">Обратная связь</a>
 			</div>
 
 		</div>
 	</footer>
+		
+	<!-- modal -->
+		<div class="modal" id="order">
+			<button class="close order_close" type="button">
+				<span></span>
+				<span></span>
+			</button>
+
+			<div class="modal__header login__header">
+				<h3>Обратная связь</h3>
+			</div>
+
+			<form class="login__form">
+				<div class="login__form_line">
+					<input type="text" placeholder="Имя" required>
+				</div>
+				<div class="login__form_line">
+					<input type="email" placeholder="E-mail" required>
+				</div>
+				<div class="login__form_line">
+					<textarea name="" placeholder="Вопрос"></textarea>
+				</div>
+				<div class="login__form_btn">
+					<button class="btn">Войти</button>
+				</div>
+			</form>
+
+		</div>
+	<!-- modal end-->
 
 	<script src="js/scripts.min.js"></script>
 
