--- a/app/profile-trainer2.html
+++ b/app/profile-trainer2.html
@@ -103,21 +103,21 @@
 
 		</div>
 	</section>
-
+	
 	<footer class="footer">
 		<div class="footer__container container">
 
 			<div class="footer__col">
 				<p>© Fitlancer, 2019, </p>
-				<p><a href="#">все права защищены</a></p>
+				<p><a href="img/policy.docx" download>все права защищены</a></p>
 			</div>
 
 			<div class="footer__col">
 				<h3>O Fitlancer</h3>
 				<ul>
 					<li><a href="#">О проекте</a></li>
-					<li><a href="#">Пользовательское соглашение</a></li>
-					<li><a href="#">Политика конфиденциальности</a></li>
+					<li><a href="img/policy.docx" download>Пользовательское соглашение</a></li>
+					<li><a href="img/policy.docx" download>Политика конфиденциальности</a></li>
 				</ul>
 			</div>
 
@@ -141,7 +141,7 @@
 			</div>
 
 			<div class="footer__col">
-				<a href="#" class="btn">Обратная связь</a>
+				<a href="#" class="btn order_open">Обратная связь</a>
 			</div>
 
 		</div>
