--- a/app/login.html
+++ b/app/login.html
@@ -50,14 +50,14 @@
 			</div>
 		</header>
 
-		<div class="login__container tabs">
+		<div class="login__container">
 
 			<div class="login__header">
 				<a href="login.html" class="active">Вход</a>
 				<a href="register.html">Регистрация</a>
 			</div>
 
-			<form class="login__form" id="login">
+			<form class="login__form">
 				<div class="login__form_line">
 					<input type="text" placeholder="Логин">
 				</div>
@@ -76,21 +76,20 @@
 
 		</div>
 
-
 		<footer class="footer">
 			<div class="footer__container container">
 
 				<div class="footer__col">
 					<p>© Fitlancer, 2019, </p>
-					<p><a href="#">все права защищены</a></p>
+					<p><a href="img/policy.docx" download>все права защищены</a></p>
 				</div>
 
 				<div class="footer__col">
 					<h3>O Fitlancer</h3>
 					<ul>
 						<li><a href="#">О проекте</a></li>
-						<li><a href="#">Пользовательское соглашение</a></li>
-						<li><a href="#">Политика конфиденциальности</a></li>
+						<li><a href="img/policy.docx" download>Пользовательское соглашение</a></li>
+						<li><a href="img/policy.docx" download>Политика конфиденциальности</a></li>
 					</ul>
 				</div>
 
@@ -114,7 +113,7 @@
 				</div>
 
 				<div class="footer__col">
-					<a href="#" class="btn">Обратная связь</a>
+					<a href="#" class="btn order_open">Обратная связь</a>
 				</div>
 
 			</div>
@@ -122,6 +121,35 @@
 
 	</main>
 
+	
+	<!-- modal -->
+		<div class="modal" id="order">
+			<button class="close order_close" type="button">
+				<span></span>
+				<span></span>
+			</button>
+
+			<div class="modal__header login__header">
+				<h3>Обратная связь</h3>
+			</div>
+
+			<form class="login__form">
+				<div class="login__form_line">
+					<input type="text" placeholder="Имя" required>
+				</div>
+				<div class="login__form_line">
+					<input type="email" placeholder="E-mail" required>
+				</div>
+				<div class="login__form_line">
+					<textarea name="" placeholder="Вопрос"></textarea>
+				</div>
+				<div class="login__form_btn">
+					<button class="btn">Войти</button>
+				</div>
+			</form>
+
+		</div>
+	<!-- modal end-->
 
 	<script src="js/scripts.js"></script>
 
