page user + pravka email commit

--- a/app/profile.html
+++ b/app/profile.html
@@ -134,7 +134,7 @@
 					<a href="#" target="_blank"><img src="img/footer--tg.png" alt=""></a>
 					<a href="#" target="_blank"><img src="img/footer--vk.png" alt=""></a>
 				</div>
-				<a href="mailto:fitlancer@gmail.com">fitlancer@gmail.com</a>
+				<a href="mailto:Fitlancerinfo@gmail.com">Fitlancerinfo@gmail.com</a>
 			</div>
 
 			<div class="footer__col">
@@ -187,7 +187,7 @@
 				<a href="#" class="btn">Спина</a>
 				<a href="#" class="btn">Ягодицы</a>
 				<a href="#" class="btn">Ноги</a>
-				<a href="#" class="btn">Мульти</a>
+				<a href="#" class="btn">Разное</a>
 				<a href="#" class="btn">Стретчинг</a>
 			</div>
 
