--- a/app/register.html
+++ b/app/register.html
@@ -62,7 +62,7 @@
 				<div class="login__form_menthor">
 
 					<input type="radio" id="client" name="radio" checked>
-					<label for="client" class="btn">Я клиент</label>
+					<label for="client" class="btn">Я пользователь</label>
 
 					<input type="radio" id="menthor" name="radio">
 					<label for="menthor" class="btn">Я тренер</label>
@@ -140,7 +140,7 @@
 						<a href="#" target="_blank"><img src="img/footer--tg.png" alt=""></a>
 						<a href="#" target="_blank"><img src="img/footer--vk.png" alt=""></a>
 					</div>
-					<a href="mailto:fitlancer@gmail.com">fitlancer@gmail.com</a>
+					<a href="mailto:Fitlancerinfo@gmail.com">Fitlancerinfo@gmail.com</a>
 				</div>
 
 				<div class="footer__col">
