--- a/app/konstruktor2.html
+++ b/app/konstruktor2.html
@@ -147,7 +147,7 @@
 					<a href="#" target="_blank"><img src="img/footer--tg.png" alt=""></a>
 					<a href="#" target="_blank"><img src="img/footer--vk.png" alt=""></a>
 				</div>
-				<a href="mailto:fitlancer@gmail.com">fitlancer@gmail.com</a>
+				<a href="mailto:Fitlancerinfo@gmail.com">Fitlancerinfo@gmail.com</a>
 			</div>
 
 			<div class="footer__col">
