pravka gif modal + policy pdf commit

--- a/app/konstruktor3.html
+++ b/app/konstruktor3.html
@@ -67,9 +67,10 @@
 			<div class="konstruktor--step__comment">
 
 				<div class="konstruktor--step__comment_item">
-					<div class="konstruktor--step__comment_img">
+					<a href="#" class="konstruktor--step__comment_img gif_open">
+						<span></span>
 						<img src="img/admin--list1.jpg" alt="">
-					</div>
+					</a>
 					<div class="konstruktor--step__comment_option">
 						<a href="#"><img src="img/pen.png" alt=""></a>
 						<a href="#"><img src="img/del.png" alt=""></a>
@@ -93,9 +94,10 @@
 				</div>
 
 				<div class="konstruktor--step__comment_item">
-					<div class="konstruktor--step__comment_img">
+					<a href="#" class="konstruktor--step__comment_img gif_open">
+						<span></span>
 						<img src="img/admin--list1.jpg" alt="">
-					</div>
+					</a>
 					<div class="konstruktor--step__comment_option">
 						<a href="#"><img src="img/pen.png" alt=""></a>
 						<a href="#"><img src="img/del.png" alt=""></a>
@@ -157,15 +159,15 @@
 
 			<div class="footer__col">
 				<p>© Fitlancer, 2019, </p>
-				<p><a href="img/policy.docx" download>все права защищены</a></p>
+				<p><a href="img/policy.pdf" target="_blank">все права защищены</a></p>
 			</div>
 
 			<div class="footer__col">
 				<h3>O Fitlancer</h3>
 				<ul>
 					<li><a href="#">О проекте</a></li>
-					<li><a href="img/policy.docx" download>Пользовательское соглашение</a></li>
-					<li><a href="img/policy.docx" download>Политика конфиденциальности</a></li>
+					<li><a href="img/pol.pdf" target="_blank">Пользовательское соглашение</a></li>
+					<li><a href="img/policy.pdf" target="_blank">Политика конфиденциальности</a></li>
 				</ul>
 			</div>
 
@@ -221,6 +223,18 @@
 				</div>
 			</form>
 
+		</div>
+		<div class="modal--gif modal" id="gif">
+			<button class="close gif_close" type="button">
+				<span></span>
+				<span></span>
+			</button>
+
+			<div class="modal__header login__header">
+				<h3>Название упражнения</h3>
+			</div>
+
+			<img src="img/animation1.gif" alt="">
 		</div>
 	<!-- modal end-->
 
