--- a/app/konstruktor.html
+++ b/app/konstruktor.html
@@ -91,15 +91,15 @@
 
 			<div class="footer__col">
 				<p>© Fitlancer, 2019, </p>
-				<p><a href="img/policy.docx" download>все права защищены</a></p>
+				<p><a href="img/policy.pdf" target="_blank">все права защищены</a></p>
 			</div>
 
 			<div class="footer__col">
 				<h3>O Fitlancer</h3>
 				<ul>
 					<li><a href="#">О проекте</a></li>
-					<li><a href="img/policy.docx" download>Пользовательское соглашение</a></li>
-					<li><a href="img/policy.docx" download>Политика конфиденциальности</a></li>
+					<li><a href="img/pol.pdf" target="_blank">Пользовательское соглашение</a></li>
+					<li><a href="img/policy.pdf" target="_blank">Политика конфиденциальности</a></li>
 				</ul>
 			</div>
 
