pravki 2.0 text commit

--- a/app/index.html
+++ b/app/index.html
@@ -60,19 +60,19 @@
 					<a href="#" class="index__item">
 						<img src="img/index1.jpg" alt="">
 						<p>
-							<span>Наши <b>тренеры</b></span>
+							<span>Наши тренеры</span>
 						</p>
 					</a>
 					<a href="#" class="index__item">
 						<img src="img/index2.jpg" alt="">
 						<p>
-							<span><b>Упражнения</b> для дома</span>
+							<span>Упражнения для дома</span>
 						</p>
 					</a>
 					<a href="#" class="index__item">
 						<img src="img/index3.jpg" alt="">
 						<p>
-							<span><b>Общий список</b> упражнений</span>
+							<span>Общий список упражнений</span>
 						</p>
 					</a>
 
@@ -85,7 +85,7 @@
 			<div class="footer__container container">
 
 				<div class="footer__col">
-					<p>© Fitlancer, 2019, </p>
+					<p>© Fitlancer, 2019 </p>
 					<p><a href="img/policy.pdf" target="_blank">все права защищены</a></p>
 				</div>
 
