--- a/app/konstruktor2.html
+++ b/app/konstruktor2.html
@@ -89,7 +89,7 @@
 
 				<div class="konstruktor__list_item">
 					<a href="#" class="konstruktor__list_link">
-						<span>1 период</span>
+						<span>Период 1 (силовой)</span>
 						<b>Перейти</b>
 					</a>
 					<a href="#" class="btn">Удалить</a>
@@ -118,7 +118,7 @@
 		<div class="footer__container container">
 
 			<div class="footer__col">
-				<p>© Fitlancer, 2019, </p>
+				<p>© Fitlancer, 2019 </p>
 				<p><a href="img/policy.pdf" target="_blank">все права защищены</a></p>
 			</div>
 
