--- a/app/profile-trainer-edit.html
+++ b/app/profile-trainer-edit.html
@@ -107,7 +107,7 @@
 							<textarea name="" id="" placeholder="О себе и достижениях *"></textarea>
 						</div>
 						<div class="profile--trainer__textarea">
-							<textarea name="" id="" placeholder="Направления работы с клиентами *"></textarea>
+							<textarea name="" id="" placeholder="Направления работы с клиентами * (виды услуг)"></textarea>
 						</div>
 					</div>
 				</div>
@@ -125,7 +125,7 @@
 		<div class="footer__container container">
 
 			<div class="footer__col">
-				<p>© Fitlancer, 2019, </p>
+				<p>© Fitlancer, 2019 </p>
 				<p><a href="img/policy.pdf" target="_blank">все права защищены</a></p>
 			</div>
 
