--- a/app/profile-trainer.html
+++ b/app/profile-trainer.html
@@ -110,7 +110,7 @@
 		<div class="footer__container container">
 
 			<div class="footer__col">
-				<p>© Fitlancer, 2019, </p>
+				<p>© Fitlancer, 2019 </p>
 				<p><a href="img/policy.pdf" target="_blank">все права защищены</a></p>
 			</div>
 
