--- a/app/users.html
+++ b/app/users.html
@@ -50,7 +50,6 @@
 		<div class="konstruktor__container container">
 			<div class="konstruktor__title">
 				<h2>Пользователи</h2>
-				<a href="#" class="btn">Добавить пользователя</a>
 			</div>
 
 			<div class="konstruktor__list">
@@ -58,44 +57,44 @@
 				<div class="konstruktor__list_item">
 					<a href="#" class="konstruktor__list_link">
 						<span>Иван Сидоров</span>
-						<b>Редактировать</b>
+						<b>Принять</b>
 					</a>
-					<a href="#" class="btn">Удалить</a>
+					<a href="#" class="btn">Отклонить</a>
 				</div>
 				<div class="konstruktor__list_item">
 					<a href="#" class="konstruktor__list_link">
 						<span>Иван Сидоров</span>
-						<b>Редактировать</b>
+						<b>Принять</b>
 					</a>
-					<a href="#" class="btn">Удалить</a>
+					<a href="#" class="btn">Отклонить</a>
 				</div>
 				<div class="konstruktor__list_item">
 					<a href="#" class="konstruktor__list_link">
 						<span>Иван Сидоров</span>
-						<b>Редактировать</b>
+						<b>Принять</b>
 					</a>
-					<a href="#" class="btn">Удалить</a>
+					<a href="#" class="btn">Отклонить</a>
 				</div>
 				<div class="konstruktor__list_item">
 					<a href="#" class="konstruktor__list_link">
 						<span>Иван Сидоров</span>
-						<b>Редактировать</b>
+						<b>Принять</b>
 					</a>
-					<a href="#" class="btn">Удалить</a>
+					<a href="#" class="btn">Отклонить</a>
 				</div>
 				<div class="konstruktor__list_item">
 					<a href="#" class="konstruktor__list_link">
 						<span>Иван Сидоров</span>
-						<b>Редактировать</b>
+						<b>Принять</b>
 					</a>
-					<a href="#" class="btn">Удалить</a>
+					<a href="#" class="btn">Отклонить</a>
 				</div>
 				<div class="konstruktor__list_item">
 					<a href="#" class="konstruktor__list_link">
 						<span>Иван Сидоров</span>
-						<b>Редактировать</b>
+						<b>Принять</b>
 					</a>
-					<a href="#" class="btn">Удалить</a>
+					<a href="#" class="btn">Отклонить</a>
 				</div>
 
 			</div>
@@ -107,7 +106,7 @@
 		<div class="footer__container container">
 
 			<div class="footer__col">
-				<p>© Fitlancer, 2019, </p>
+				<p>© Fitlancer, 2019 </p>
 				<p><a href="img/policy.pdf" target="_blank">все права защищены</a></p>
 			</div>
 
