--- a/app/konstruktor3.html
+++ b/app/konstruktor3.html
@@ -50,7 +50,7 @@
 		<div class="container">
 			<div class="konstruktor__title konstruktor__title--left">
 				<div>
-					<h2>1 Неделя</h2>
+					<h2>Первая неделя</h2>
 					<a href="#"><span></span>назад</a>
 				</div>
 				<a href="#" class="btn">Добавить день недели</a>
@@ -83,6 +83,11 @@
 						<p>
 							<span>Количество подходов/ Время выполнения</span>
 							<span><b>30</b></span>
+						</p>
+
+						<p>
+							<span>Количество повторений</span>
+							<span><b>12</b></span>
 						</p>
 						<p>
 							<span>Комментарий от тренера</span>
@@ -158,7 +163,7 @@
 		<div class="footer__container container">
 
 			<div class="footer__col">
-				<p>© Fitlancer, 2019, </p>
+				<p>© Fitlancer, 2019 </p>
 				<p><a href="img/policy.pdf" target="_blank">все права защищены</a></p>
 			</div>
 
