pravki 2.2 text - accardio + konstruktor3.1 commit

--- a/app/profile-trainer-edit.html
+++ b/app/profile-trainer-edit.html
@@ -50,7 +50,7 @@
 		<div class="container">
 
 			<div class="title">
-				<a href="#" class="title__link"><span></span>вернутся к профилю</a>
+				<a href="#" class="title__link"><span></span>вернуться к профилю</a>
 				<div>
 					<a href="#" class="btn">Сообщения</a>
 					<a href="#" class="btn">Мои программы</a>
@@ -148,7 +148,7 @@
 			</div>
 
 			<div class="footer__col">
-				<h3>Связь с нами</h3>
+				<h3>Связаться с нами</h3>
 				<div class="footer__soc">
 					<a href="#" target="_blank"><img src="img/footer--in.png" alt=""></a>
 					<a href="#" target="_blank"><img src="img/footer--tg.png" alt=""></a>
