--- a/app/konstruktor2.html
+++ b/app/konstruktor2.html
@@ -141,7 +141,7 @@
 			</div>
 
 			<div class="footer__col">
-				<h3>Связь с нами</h3>
+				<h3>Связаться с нами</h3>
 				<div class="footer__soc">
 					<a href="#" target="_blank"><img src="img/footer--in.png" alt=""></a>
 					<a href="#" target="_blank"><img src="img/footer--tg.png" alt=""></a>
