--- a/app/konstruktor3.html
+++ b/app/konstruktor3.html
@@ -81,10 +81,13 @@
 							<span><b>Жим  Арнольда</b></span>
 						</p>
 						<p>
-							<span>Количество подходов/ Время выполнения</span>
+							<span>Количество подходов</span>
 							<span><b>30</b></span>
 						</p>
-
+						<p>
+							<span>Время выполнения</span>
+							<span><b>50 сек</b></span>
+						</p>
 						<p>
 							<span>Количество повторений</span>
 							<span><b>12</b></span>
@@ -92,7 +95,7 @@
 						<p>
 							<span>Комментарий от тренера</span>
 							<span>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt 
+								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
 							</span>
 						</p>
 					</div>
@@ -119,7 +122,7 @@
 						<p>
 							<span>Комментарий от тренера</span>
 							<span>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt 
+								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
 							</span>
 						</p>
 					</div>
@@ -186,7 +189,7 @@
 			</div>
 
 			<div class="footer__col">
-				<h3>Связь с нами</h3>
+				<h3>Связаться с нами</h3>
 				<div class="footer__soc">
 					<a href="#" target="_blank"><img src="img/footer--in.png" alt=""></a>
 					<a href="#" target="_blank"><img src="img/footer--tg.png" alt=""></a>
