pravki 2.3 nav + konstruktor3.1 commit

--- a/app/konstruktor3.1.html
+++ b/app/konstruktor3.1.html
@@ -29,7 +29,7 @@
 
 			<nav class="header__nav nav">
 				<ul>
-					<li><a href="about.html">О нас</a></li>
+					<li><a href="about.html">О проекте</a></li>
 					<li><a href="partners.html">Наши тренеры</a></li>
 					<li><a href="list.html">Список упражнений</a></li>
 				</ul>
@@ -66,7 +66,7 @@
 
 			<div class="konstruktor--step__comment">
 
-				<div class="konstruktor--step__comment_item">
+				<div class="konstruktor--step__comment_item konstruktor--step__comment_item--two">
 					<a href="#" class="konstruktor--step__comment_img gif_open">
 						<span></span>
 						<img src="img/admin--list1.jpg" alt="">
@@ -97,7 +97,7 @@
 					</div>
 				</div>
 
-				<div class="konstruktor--step__comment_item">
+				<div class="konstruktor--step__comment_item konstruktor--step__comment_item--two">
 					<a href="#" class="konstruktor--step__comment_img gif_open">
 						<span></span>
 						<img src="img/admin--list1.jpg" alt="">
@@ -108,8 +108,16 @@
 							<span><b>Жим  Арнольда</b></span>
 						</p>
 						<p>
-							<span>Количество подходов/ Время выполнения</span>
+							<span>Количество подходов</span>
 							<span><b>30</b></span>
+						</p>
+						<p>
+							<span>Время выполнения</span>
+							<span><b>50 сек</b></span>
+						</p>
+						<p>
+							<span>Количество повторений</span>
+							<span><b>12</b></span>
 						</p>
 						<p>
 							<span>Комментарий от тренера</span>
@@ -174,7 +182,7 @@
 			<div class="footer__col">
 				<h3>Меню</h3>
 				<ul>
-					<li><a href="about.html">О нас</a></li>
+					<li><a href="about.html">О проекте</a></li>
 					<li><a href="partners.html">Наши тренеры</a></li>
 					<li><a href="list.html">Список упражнений</a></li>
 				</ul>
