--- a/app/profile2.html
+++ b/app/profile2.html
@@ -30,7 +30,7 @@
 
 			<nav class="header__nav nav">
 				<ul>
-					<li><a href="about.html">О нас</a></li>
+					<li><a href="about.html">О проекте</a></li>
 					<li><a href="partners.html">Наши тренеры</a></li>
 					<li><a href="list.html">Список упражнений</a></li>
 				</ul>
@@ -116,7 +116,7 @@
 			<div class="footer__col">
 				<h3>Меню</h3>
 				<ul>
-					<li><a href="about.html">О нас</a></li>
+					<li><a href="about.html">О проекте</a></li>
 					<li><a href="partners.html">Наши тренеры</a></li>
 					<li><a href="list.html">Список упражнений</a></li>
 				</ul>
