--- a/app/konstruktor3.html
+++ b/app/konstruktor3.html
@@ -29,7 +29,7 @@
 
 			<nav class="header__nav nav">
 				<ul>
-					<li><a href="about.html">О нас</a></li>
+					<li><a href="about.html">О проекте</a></li>
 					<li><a href="partners.html">Наши тренеры</a></li>
 					<li><a href="list.html">Список упражнений</a></li>
 				</ul>
@@ -116,8 +116,16 @@
 							<span><b>Жим  Арнольда</b></span>
 						</p>
 						<p>
-							<span>Количество подходов/ Время выполнения</span>
+							<span>Количество подходов</span>
 							<span><b>30</b></span>
+						</p>
+						<p>
+							<span>Время выполнения</span>
+							<span><b>50 сек</b></span>
+						</p>
+						<p>
+							<span>Количество повторений</span>
+							<span><b>12</b></span>
 						</p>
 						<p>
 							<span>Комментарий от тренера</span>
@@ -182,7 +190,7 @@
 			<div class="footer__col">
 				<h3>Меню</h3>
 				<ul>
-					<li><a href="about.html">О нас</a></li>
+					<li><a href="about.html">О проекте</a></li>
 					<li><a href="partners.html">Наши тренеры</a></li>
 					<li><a href="list.html">Список упражнений</a></li>
 				</ul>
