pravki 2.3 nav + konstruktor3.1 commit

--- a/app/konstruktor3.1.html
+++ b/app/konstruktor3.1.html
@@ -29,9 +29,9 @@
 
 			<nav class="header__nav nav">
 				<ul>
-					<li><a href="about.html">О проекте</a></li>
-					<li><a href="partners.html">Наши тренеры</a></li>
-					<li><a href="list.html">Список упражнений</a></li>
+					<li><a href="#">О проекте</a></li>
+					<li><a href="#">Наши тренеры</a></li>
+					<li><a href="#">Список упражнений</a></li>
 				</ul>
 			</nav>
 
@@ -66,69 +66,49 @@
 
 			<div class="konstruktor--step__comment">
 
-				<div class="konstruktor--step__comment_item konstruktor--step__comment_item--two">
-					<a href="#" class="konstruktor--step__comment_img gif_open">
-						<span></span>
-						<img src="img/admin--list1.jpg" alt="">
-					</a>
-					<div>
+				<div class="konstruktor--step__comment_item konstruktor--step__comment_item--two block">
+					<div class="block__header">
+						<span class="arrow"></span>
+						<a href="#" class="konstruktor--step__comment_img gif_open">
+							<span></span>
+							<img src="img/admin--list1.jpg" alt="">
+						</a>
+						<div class="konstruktor--step__comment_block">
+							<p>
+								<span>Название упражнения:</span>
+								<span><b>Жим  Арнольда</b></span>
+							</p>
+						</div>
+					</div>
+					<div class="block__content">
 						<p>
-							<span>Название упражнения</span>
-							<span><b>Жим  Арнольда</b></span>
-						</p>
-						<p>
-							<span>Количество подходов</span>
-							<span><b>30</b></span>
-						</p>
-						<p>
-							<span>Время выполнения</span>
-							<span><b>50 сек</b></span>
-						</p>
-						<p>
-							<span>Количество повторений</span>
-							<span><b>12</b></span>
-						</p>
-						<p>
-							<span>Комментарий от тренера</span>
-							<span>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-							</span>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad reiciendis illo provident recusandae inventore beatae harum facilis a sunt id amet cupiditate at deserunt soluta aliquid accusantium labore, temporibus corrupti dolore nisi doloremque aperiam totam, dicta nulla blanditiis. Magni, at nisi possimus itaque vitae, neque illum repudiandae dolores? Temporibus hic libero veniam atque debitis eum unde quasi deleniti quos assumenda aut minima itaque architecto in porro excepturi mollitia quo dolorem error dolore incidunt accusantium, quia labore. Sit, ducimus. Natus hic eos quae molestiae, quibusdam eaque ipsum! Facere dignissimos saepe laborum doloribus quasi ratione labore illum numquam obcaecati ullam, id natus.
 						</p>
 					</div>
 				</div>
 
-				<div class="konstruktor--step__comment_item konstruktor--step__comment_item--two">
-					<a href="#" class="konstruktor--step__comment_img gif_open">
-						<span></span>
-						<img src="img/admin--list1.jpg" alt="">
-					</a>
-					<div>
+				<div class="konstruktor--step__comment_item konstruktor--step__comment_item--two block">
+					<div class="block__header">
+						<span class="arrow"></span>
+						<a href="#" class="konstruktor--step__comment_img gif_open">
+							<span></span>
+							<img src="img/admin--list1.jpg" alt="">
+						</a>
+						<div class="konstruktor--step__comment_block">
+							<p>
+								<span>Название упражнения:</span>
+								<span><b>Жим  Арнольда</b></span>
+							</p>
+						</div>
+					</div>
+					<div class="block__content">
 						<p>
-							<span>Название упражнения</span>
-							<span><b>Жим  Арнольда</b></span>
-						</p>
-						<p>
-							<span>Количество подходов</span>
-							<span><b>30</b></span>
-						</p>
-						<p>
-							<span>Время выполнения</span>
-							<span><b>50 сек</b></span>
-						</p>
-						<p>
-							<span>Количество повторений</span>
-							<span><b>12</b></span>
-						</p>
-						<p>
-							<span>Комментарий от тренера</span>
-							<span>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-							</span>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad reiciendis illo provident recusandae inventore beatae harum facilis a sunt id amet cupiditate at deserunt soluta aliquid accusantium labore, temporibus corrupti dolore nisi doloremque aperiam totam, dicta nulla blanditiis. Magni, at nisi possimus itaque vitae, neque illum repudiandae dolores? Temporibus hic libero veniam atque debitis eum unde quasi deleniti quos assumenda aut minima itaque architecto in porro excepturi mollitia quo dolorem error dolore incidunt accusantium, quia labore. Sit, ducimus. Natus hic eos quae molestiae, quibusdam eaque ipsum! Facere dignissimos saepe laborum doloribus quasi ratione labore illum numquam obcaecati ullam, id natus.
 						</p>
 					</div>
 				</div>
-
 			</div>
+
 
 			<form class="konstruktor--step__form">
 				<div class="konstruktor--step__form_header">
@@ -182,7 +162,7 @@
 			<div class="footer__col">
 				<h3>Меню</h3>
 				<ul>
-					<li><a href="about.html">О проекте</a></li>
+					<li><a href="#">Как работает Fitlancer?</a></li>
 					<li><a href="partners.html">Наши тренеры</a></li>
 					<li><a href="list.html">Список упражнений</a></li>
 				</ul>
