--- a/app/konstruktor3.html
+++ b/app/konstruktor3.html
@@ -29,9 +29,9 @@
 
 			<nav class="header__nav nav">
 				<ul>
-					<li><a href="about.html">О проекте</a></li>
-					<li><a href="partners.html">Наши тренеры</a></li>
-					<li><a href="list.html">Список упражнений</a></li>
+					<li><a href="#">О проекте</a></li>
+					<li><a href="#">Наши тренеры</a></li>
+					<li><a href="#">Список упражнений</a></li>
 				</ul>
 			</nav>
 
@@ -75,25 +75,25 @@
 						<a href="#"><img src="img/pen.png" alt=""></a>
 						<a href="#"><img src="img/del.png" alt=""></a>
 					</div>
-					<div>
+					<div class="konstruktor--step__comment_block">
 						<p>
-							<span>Название упражнения</span>
+							<span>Название упражнения:</span>
 							<span><b>Жим  Арнольда</b></span>
 						</p>
 						<p>
-							<span>Количество подходов</span>
+							<span>Количество подходов:</span>
 							<span><b>30</b></span>
 						</p>
 						<p>
-							<span>Время выполнения</span>
+							<span>Время выполнения:</span>
 							<span><b>50 сек</b></span>
 						</p>
 						<p>
-							<span>Количество повторений</span>
+							<span>Количество повторений:</span>
 							<span><b>12</b></span>
 						</p>
 						<p>
-							<span>Комментарий от тренера</span>
+							<span>Комментарий от тренера:</span>
 							<span>
 								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
 							</span>
@@ -110,25 +110,25 @@
 						<a href="#"><img src="img/pen.png" alt=""></a>
 						<a href="#"><img src="img/del.png" alt=""></a>
 					</div>
-					<div>
+					<div class="konstruktor--step__comment_block">
 						<p>
-							<span>Название упражнения</span>
+							<span>Название упражнения:</span>
 							<span><b>Жим  Арнольда</b></span>
 						</p>
 						<p>
-							<span>Количество подходов</span>
+							<span>Количество подходов:</span>
 							<span><b>30</b></span>
 						</p>
 						<p>
-							<span>Время выполнения</span>
+							<span>Время выполнения:</span>
 							<span><b>50 сек</b></span>
 						</p>
 						<p>
-							<span>Количество повторений</span>
+							<span>Количество повторений:</span>
 							<span><b>12</b></span>
 						</p>
 						<p>
-							<span>Комментарий от тренера</span>
+							<span>Комментарий от тренера:</span>
 							<span>
 								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
 							</span>
@@ -190,7 +190,7 @@
 			<div class="footer__col">
 				<h3>Меню</h3>
 				<ul>
-					<li><a href="about.html">О проекте</a></li>
+					<li><a href="#">Как работает Fitlancer?</a></li>
 					<li><a href="partners.html">Наши тренеры</a></li>
 					<li><a href="list.html">Список упражнений</a></li>
 				</ul>
