--- a/app/register.html
+++ b/app/register.html
@@ -33,9 +33,9 @@
 
 				<nav class="header__nav nav">
 					<ul>
-						<li><a href="about.html">О проекте</a></li>
-						<li><a href="partners.html">Наши тренеры</a></li>
-						<li><a href="list.html">Список упражнений</a></li>
+						<li><a href="#">О проекте</a></li>
+						<li><a href="#">Наши тренеры</a></li>
+						<li><a href="#">Список упражнений</a></li>
 					</ul>
 				</nav>
 
@@ -127,7 +127,7 @@
 			<div class="footer__col">
 				<h3>Меню</h3>
 				<ul>
-					<li><a href="about.html">О проекте</a></li>
+					<li><a href="#">Как работает Fitlancer?</a></li>
 					<li><a href="partners.html">Наши тренеры</a></li>
 					<li><a href="list.html">Список упражнений</a></li>
 				</ul>
