--- a/app/exercises.html
+++ b/app/exercises.html
@@ -30,9 +30,9 @@
 
 			<nav class="header__nav nav">
 				<ul>
-					<li><a href="about.html">О проекте</a></li>
-					<li><a href="partners.html">Наши тренеры</a></li>
-					<li><a href="list.html">Список упражнений</a></li>
+					<li><a href="#">О проекте</a></li>
+					<li><a href="#">Наши тренеры</a></li>
+					<li><a href="#">Список упражнений</a></li>
 				</ul>
 			</nav>
 
@@ -56,7 +56,7 @@
 				<input type="text" placeholder="Что Вы ищите?">
 			</form>
 
-			<h2>Наши тренеры</h2>
+			<h2>Группа мышц</h2>
 
 			<div class="exercises__list">
 				
@@ -166,7 +166,7 @@
 			<div class="footer__col">
 				<h3>Меню</h3>
 				<ul>
-					<li><a href="about.html">О проекте</a></li>
+					<li><a href="#">Как работает Fitlancer?</a></li>
 					<li><a href="partners.html">Наши тренеры</a></li>
 					<li><a href="list.html">Список упражнений</a></li>
 				</ul>
