--- a/app/exercises.html
+++ b/app/exercises.html
@@ -51,9 +51,11 @@
 		<div class="container">
 
 			<form class="exercises__btn">
-				<a href="#" class="btn">Общий список упражнений</a>
-				<a href="#" class="btn">Список упражнений для дома</a>
 				<input type="text" placeholder="Что Вы ищите?">
+				<div>
+					<a href="#" class="btn">Общий список упражнений</a>
+					<a href="#" class="btn">Список упражнений для дома</a>
+				</div>
 			</form>
 
 			<h2>Группа мышц</h2>
@@ -157,7 +159,8 @@
 			<div class="footer__col">
 				<h3>O Fitlancer</h3>
 				<ul>
-					<li><a href="#">О проекте</a></li>
+					<li><a href="#">Как работает Fitlancer?</a></li>
+					
 					<li><a href="img/pol.pdf" target="_blank">Пользовательское соглашение</a></li>
 					<li><a href="img/policy.pdf" target="_blank">Политика конфиденциальности</a></li>
 				</ul>
@@ -166,7 +169,7 @@
 			<div class="footer__col">
 				<h3>Меню</h3>
 				<ul>
-					<li><a href="#">Как работает Fitlancer?</a></li>
+					<li><a href="#">О нас</a></li>
 					<li><a href="partners.html">Наши тренеры</a></li>
 					<li><a href="list.html">Список упражнений</a></li>
 				</ul>
