--- a/app/index.html
+++ b/app/index.html
@@ -80,7 +80,7 @@
 
 			</div>
 		</section>
-
+	
 		<footer class="footer">
 			<div class="footer__container container">
 
@@ -92,7 +92,7 @@
 				<div class="footer__col">
 					<h3>O Fitlancer</h3>
 					<ul>
-						<li><a href="#">О проекте</a></li>
+						<li><a href="#">Как работает Fitlancer?</a></li>
 						<li><a href="img/pol.pdf" target="_blank">Пользовательское соглашение</a></li>
 						<li><a href="img/policy.pdf" target="_blank">Политика конфиденциальности</a></li>
 					</ul>
@@ -101,7 +101,7 @@
 				<div class="footer__col">
 					<h3>Меню</h3>
 					<ul>
-						<li><a href="#">Как работает Fitlancer?</a></li>
+						<li><a href="#">О нас</a></li>
 						<li><a href="partners.html">Наши тренеры</a></li>
 						<li><a href="list.html">Список упражнений</a></li>
 					</ul>
@@ -123,7 +123,6 @@
 
 			</div>
 		</footer>
-
 	</main>
 
 	<!-- modal -->
