--- a/app/register.html
+++ b/app/register.html
@@ -107,48 +107,49 @@
 
 		</div>
 
-	<footer class="footer">
-		<div class="footer__container container">
+	
+		<footer class="footer">
+			<div class="footer__container container">
 
-			<div class="footer__col">
-				<p>© Fitlancer, 2019 </p>
-				<p><a href="img/policy.pdf" target="_blank">все права защищены</a></p>
-			</div>
-
-			<div class="footer__col">
-				<h3>O Fitlancer</h3>
-				<ul>
-					<li><a href="#">О проекте</a></li>
-					<li><a href="img/pol.pdf" target="_blank">Пользовательское соглашение</a></li>
-					<li><a href="img/policy.pdf" target="_blank">Политика конфиденциальности</a></li>
-				</ul>
-			</div>
-
-			<div class="footer__col">
-				<h3>Меню</h3>
-				<ul>
-					<li><a href="#">Как работает Fitlancer?</a></li>
-					<li><a href="partners.html">Наши тренеры</a></li>
-					<li><a href="list.html">Список упражнений</a></li>
-				</ul>
-			</div>
-
-			<div class="footer__col">
-				<h3>Связаться с нами</h3>
-				<div class="footer__soc">
-					<a href="#" target="_blank"><img src="img/footer--in.png" alt=""></a>
-					<a href="#" target="_blank"><img src="img/footer--tg.png" alt=""></a>
-					<a href="#" target="_blank"><img src="img/footer--vk.png" alt=""></a>
+				<div class="footer__col">
+					<p>© Fitlancer, 2019 </p>
+					<p><a href="img/policy.pdf" target="_blank">все права защищены</a></p>
 				</div>
-				<a href="mailto:Fitlancerinfo@gmail.com">Fitlancerinfo@gmail.com</a>
-			</div>
 
-			<div class="footer__col">
-				<a href="#" class="btn order_open">Обратная связь</a>
-			</div>
+				<div class="footer__col">
+					<h3>O Fitlancer</h3>
+					<ul>
+						<li><a href="#">Как работает Fitlancer?</a></li>
+						<li><a href="img/pol.pdf" target="_blank">Пользовательское соглашение</a></li>
+						<li><a href="img/policy.pdf" target="_blank">Политика конфиденциальности</a></li>
+					</ul>
+				</div>
 
-		</div>
-	</footer>
+				<div class="footer__col">
+					<h3>Меню</h3>
+					<ul>
+						<li><a href="#">О нас</a></li>
+						<li><a href="partners.html">Наши тренеры</a></li>
+						<li><a href="list.html">Список упражнений</a></li>
+					</ul>
+				</div>
+
+				<div class="footer__col">
+					<h3>Связаться с нами</h3>
+					<div class="footer__soc">
+						<a href="#" target="_blank"><img src="img/footer--in.png" alt=""></a>
+						<a href="#" target="_blank"><img src="img/footer--tg.png" alt=""></a>
+						<a href="#" target="_blank"><img src="img/footer--vk.png" alt=""></a>
+					</div>
+					<a href="mailto:Fitlancerinfo@gmail.com">Fitlancerinfo@gmail.com</a>
+				</div>
+
+				<div class="footer__col">
+					<a href="#" class="btn order_open">Обратная связь</a>
+				</div>
+
+			</div>
+		</footer>
 
 	</main>
 
