--- a/app/users.html
+++ b/app/users.html
@@ -101,7 +101,7 @@
 			
 		</div>
 	</section>
-
+	
 	<footer class="footer">
 		<div class="footer__container container">
 
@@ -113,7 +113,7 @@
 			<div class="footer__col">
 				<h3>O Fitlancer</h3>
 				<ul>
-					<li><a href="#">О проекте</a></li>
+					<li><a href="#">Как работает Fitlancer?</a></li>
 					<li><a href="img/pol.pdf" target="_blank">Пользовательское соглашение</a></li>
 					<li><a href="img/policy.pdf" target="_blank">Политика конфиденциальности</a></li>
 				</ul>
@@ -122,7 +122,7 @@
 			<div class="footer__col">
 				<h3>Меню</h3>
 				<ul>
-					<li><a href="#">Как работает Fitlancer?</a></li>
+					<li><a href="#">О нас</a></li>
 					<li><a href="partners.html">Наши тренеры</a></li>
 					<li><a href="list.html">Список упражнений</a></li>
 				</ul>
