--- a/app/exercises.html
+++ b/app/exercises.html
@@ -51,11 +51,14 @@
 		<div class="container">
 
 			<form class="exercises__btn">
-				<input type="text" placeholder="Что Вы ищите?">
 				<div>
 					<a href="#" class="btn">Общий список упражнений</a>
 					<a href="#" class="btn">Список упражнений для дома</a>
 				</div>
+				<p>
+					<input type="text" placeholder="Что Вы ищите?">
+					<button></button>
+				</p>	
 			</form>
 
 			<h2>Группа мышц</h2>
