--- a/app/konstruktor2.html
+++ b/app/konstruktor2.html
@@ -55,23 +55,87 @@
 				
 			<form class="konstruktor__program">
 				<p>
-					<span>1. Выберите количество периодов</span>
-					<input type="number" placeholder="1" min="1" max="52">
+					<span>1. Выберите название програмы</span>
+					<input type="text" placeholder="Название">
+				</p>
+
+				<p>
+					<span>2. Выберите количество периодов</span>
+					<span class="block konstruktor__block">
+						<span class="block__header">3</span>
+						<span class="admin--download__right_list block__content">
+							<input type="checkbox" id="press" name="select" checked>
+							<label for="press">1</label>
+
+							<input type="checkbox" id="nogi" name="select">
+							<label for="nogi">2</label>
+						</span>
+					</span>
 				</p>
 				
 				<p>
-					<span>2. Выберите количество недель</span>
+					<span>3. Выберите количество недель</span>
 					<b>
-						<label for="">1 период</label>
-						<input type="number" placeholder="1" min="1" max="52">
-					</b>
-					<b>
-						<label for="">2 период</label>
-						<input type="number" placeholder="1" min="1" max="52">
-					</b>
-					<b>
-						<label for="">3 период</label>
-						<input type="number" placeholder="1" min="1" max="52">
+						<span class="block konstruktor__block">
+							<span class="block__header">3</span>
+							<span class="admin--download__right_list block__content">
+								<input type="checkbox" id="press1" name="select" checked>
+								<label for="press1">1</label>
+
+								<input type="checkbox" id="nogi2" name="select">
+								<label for="nogi2">2</label>
+							</span>
+						</span>
+						<span class="block konstruktor__block">
+							<span class="block__header">3</span>
+							<span class="admin--download__right_list block__content">
+								<input type="checkbox" id="press2" name="select" checked>
+								<label for="press2">1</label>
+
+								<input type="checkbox" id="nogi2" name="select">
+								<label for="nogi2">2</label>
+							</span>
+						</span>
+						<span class="block konstruktor__block">
+							<span class="block__header">3</span>
+							<span class="admin--download__right_list block__content">
+								<input type="checkbox" id="press2" name="select" checked>
+								<label for="press2">1</label>
+
+								<input type="checkbox" id="nogi2" name="select">
+								<label for="nogi2">2</label>
+							</span>
+						</span>
+						<span class="block konstruktor__block">
+							<span class="block__header">3</span>
+							<span class="admin--download__right_list block__content">
+								<input type="checkbox" id="press2" name="select" checked>
+								<label for="press2">1</label>
+
+								<input type="checkbox" id="nogi2" name="select">
+								<label for="nogi2">2</label>
+							</span>
+						</span>
+						<span class="block konstruktor__block">
+							<span class="block__header">3</span>
+							<span class="admin--download__right_list block__content">
+								<input type="checkbox" id="press2" name="select" checked>
+								<label for="press2">1</label>
+
+								<input type="checkbox" id="nogi2" name="select">
+								<label for="nogi2">2</label>
+							</span>
+						</span>
+						<span class="block konstruktor__block">
+							<span class="block__header">3</span>
+							<span class="admin--download__right_list block__content">
+								<input type="checkbox" id="press2" name="select" checked>
+								<label for="press2">1</label>
+
+								<input type="checkbox" id="nogi2" name="select">
+								<label for="nogi2">2</label>
+							</span>
+						</span>
 					</b>
 				</p>
 
