--- a/app/konstruktor.html
+++ b/app/konstruktor.html
@@ -54,7 +54,7 @@
 					<h2>Недели</h2>
 					<a href="#"><span></span>назад</a>
 				</div>
-				<a href="#" class="btn">Добавить неделю</a>
+				<a href="#" class="btn">Создать новую программу</a>
 			</div>
 
 			<div class="konstruktor__list">
